QMenu: do not crash if action is destroyed in the triggered signal.

Task-number: QTBUG-4480
Reviewed-by: Thierry
(cherry picked from commit dc2cb80ceb35edd958685189e9075ac1061870f4)